[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-game"
version = "0.1.0"
description = "A PyTorch and Pygame implementation of Conway's Game of Life."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pygame>=2.5",
    "torch>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
